<resources>
    <string name="app_name">CA3</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="findYour">Find Your</string>
    <string name="NextMovie">Next Movie</string>
    <string name="MovieMania">Movie Mania</string>
    <string name="EnterMovie">Enter Movie</string>
    <string name="enterYourName">Enter Your Name</string>
    <string name="enterYourPhone">Enter Your Mobile Number</string>
    <string name="enterEmail">Enter Your Email Address</string>
    <string name="theatrenamewithAddress">Theatre Name With Address</string>
    <string name="showDate">Show Date</string>
    <string name="showTime">Show Time</string>
    <string name="sittingArrangement">Sitting Arrangement</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="diamond">Diamond</string>
    <string name="platinum">Platinum</string>
    <string name="totalCount">Total Count</string>
    <string name="agreeTandC">Agree To Terms and Conditions</string>
    <string name="submit">SUBMIT</string>
    <string name="confirmation">Confirmation</string>
    <string name="messageDialog1">Are You Sure to Continue with Payment ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="paymentCanceldialog">Payment Cancelled</string>
    <string name="checkboxmessagesnacker">Please Check the Checkbox</string>
    <string name="checkboxsnackclose">Close</string>
    <string name="checkboxandradiosnack">Please Check the Checkbox and Select Class for Seats</string>
    <string name="allinfowarning">Please Enter all the Required Information Correctly</string>
    <string name="seclectradio">Please Select Seats Class</string>
    <string name="selectRadioClose">Close</string>
    <string name="snackcheck">Check</string>
    <string name="selectedClass">You Selected</string>
    <string name="termConditionApplied">T/C applied Successfully</string>
    <string name="infoverified">Information Verified Successfully</string>
    <string name="infoverifiedsnackclose">Close</string>
    <string name="movieMaiaPayment">Movie Mania Payments</string>
    <string name="paymentName">Name</string>
    <string name="paymentPhone">Phone Number</string>
    <string name="paymentemailAddress">Email Address</string>
    <string name="paymenttheatrenameAddress">Theatre Name With Address</string>
    <string name="paymentShowDate">Show Date</string>
    <string name="paymentShowTime">Show Time</string>
    <string name="paymentCategory">Category</string>
    <string name="paymentTotalSeats">Total Seats</string>
    <string name="paymentCancel">Cancel</string>
    <string name="option1">UPI</string>
    <string name="option2">Internet Banking</string>
    <string name="option3">Credit Cards</string>
    <string name="option4">Debit Cards</string>
    <string name="paymentConfirmationrefcode">Payment Successful Your Reference Code </string>
    <string name="paymentConfirmationOK">OK</string>
    <string name="bakcgroundgray">Gray</string>
    <string name="backgroundLightBrown">LightBrown</string>
    <string name="backgroundwhite">White</string>

</resources>