<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OptionWhite"
    android:outlineSpotShadowColor="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/home_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/rubik"
            android:text="@string/findYour"
            android:textColor="#FFFFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/NextMovie"
            android:textColor="#FFFFFFFF"
            android:textColorHint="#FFFFFFFF"
            android:textColorLink="#FFFFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="51dp"
            android:layout_height="49dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.842"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/MovieMania"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_bg"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:ems="10"
        android:hint="@string/EnterMovie"
        android:inputType="text"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="#0C0C0C"
        android:paddingStart="16dp"
        android:shadowColor="@color/black"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/enterYourName"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/theatrenamewithAddress"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/enterYourPhone"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/showDate"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="132dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/showTime"
        android:inputType="time"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/purple_700"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/gold"
            android:textColor="@color/purple_700" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/silver"
            android:textColor="@color/purple_700" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/diamond"
            android:textColor="@color/purple_700" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/platinum"
            android:textColor="@color/purple_700" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sittingArrangement"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/totalCount"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="308dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/agreeTandC"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/roboto_bold"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:shadowColor="@color/black"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.058" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="74dp"
        android:layout_height="37dp"
        android:background="@drawable/search_bg"
        android:dropDownSelector="@android:color/holo_green_dark"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTime"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextTime"
        app:layout_constraintTop_toTopOf="@+id/editTextTime"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>